Migration de Disqus vers Giscus pour les commentaires

--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,21 @@ minima:
 paginate: 5
 paginate_path: "/page:num/"
 
-# Commentaires Disqus
-disqus:
-  shortname: theorbot-blog
+# Commentaires Giscus (basé sur GitHub Discussions)
+# Pour obtenir vos IDs, visitez https://giscus.app et suivez les instructions
+giscus:
+  repo: "theorbot42/blog"
+  repo_id: "R_kgDORYW9pg"  # Obtenez ceci sur giscus.app
+  category: "General"
+  category_id: "DIC_kwDORYW9ps4ClEhx"  # Obtenez ceci sur giscus.app
+  mapping: "pathname"
+  strict: "0"
+  reactions_enabled: "1"
+  emit_metadata: "0"
+  input_position: "bottom"
+  theme: "preferred_color_scheme"
+  lang: "fr"
+  loading: "lazy"
 comments: true
 
 # Exclure du traitement
