--- a/_config.yml
+++ b/_config.yml
@@ -26,20 +26,11 @@ minima:
 paginate: 5
 paginate_path: "/page:num/"
 
-# Commentaires Giscus (GitHub Discussions)
-giscus:
-  repo: "theorbot42/blog"
-  repo_id: "R_kgDONp9Aqg"  # Obtenez ceci sur giscus.app
-  category: "General"
-  category_id: "DIC_kwDONp9Aqs4ClEiF"  # Obtenez ceci sur giscus.app
-  mapping: "pathname"
-  strict: "0"
-  reactions_enabled: "1"
-  emit_metadata: "0"
-  input_position: "bottom"
-  theme: "preferred_color_scheme"
-  lang: "fr"
-  loading: "lazy"
+# Section de contact
+contact:
+  email: theorbot42@gmail.com
+  message: "Une question ? Un commentaire sur cet article ? N'hésitez pas à me contacter !"
+  cta: "Écrivez-moi"
 comments: true
 
 # Exclure du traitement
@@ -52,6 +43,7 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
   - README.md
+  - GISCUS_SETUP.md
 
 # Valeurs par défaut du front matter
 defaults:
