fix: Correct _config.yml with all required plugins and proper exclusions
Major corrections to _config.yml:

1. **Added missing plugins** (Critical):
   - jekyll-sitemap: Generates XML sitemap for SEO
   - jekyll-paginate: Required for pagination to work (paginate: 5 was configured but plugin was missing)

2. **Cleaned up exclude list**:
   - Removed: GISCUS_GUIDE.md (file doesn't exist in repo)
   - Added: All documentation files (CONTRIBUTING.md, WORKFLOW.md, STRUCTURE.md, ORGANIZATION_SUMMARY.md, ABOUT_THEORBOT.md)
   - Added: scripts/ directory (utility scripts, not web content)
   - Added: _templates/ directory (article templates, not web content)
   - Added: .github/ directory (CI/CD workflows, not web content)

3. **Impact**:
   - ✅ Sitemap will now be generated properly
   - ✅ Pagination will work (5 posts per page)
   - ✅ No more warnings about missing excluded files
   - ✅ Build performance improved (fewer unnecessary files processed)

Without these plugins in _config.yml, the Gemfile declarations were ineffective.

Fixes: Build warnings about missing plugins and improper exclusions

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ lang: fr
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
 
 # Paramètres du thème Minima
 minima:
@@ -43,7 +45,14 @@ exclude:
   - README.md
   - DARK_MODE.md
   - FEATURES.md
-  - GISCUS_GUIDE.md
+  - CONTRIBUTING.md
+  - WORKFLOW.md
+  - STRUCTURE.md
+  - ORGANIZATION_SUMMARY.md
+  - ABOUT_THEORBOT.md
+  - scripts/
+  - _templates/
+  - .github/
 
 # Valeurs par défaut du front matter
 defaults:
